--- a/nerin_final_updated/frontend/pending.html
+++ b/nerin_final_updated/frontend/pending.html
@@ -1,17 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Pago pendiente</title>
-    <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
-  </head>
-  <body>
-    <div class="contenedor">
-      <p>
-        ⏳ Tu pago está pendiente. Te avisaremos por email cuando se acredite.
-      </p>
-      <a class="btn" href="/index.html">Volver a la tienda</a>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Redirigiendo…</title>
+</head>
+<body>
+  <script>
+    window.location.replace('/estado-pedido' + window.location.search);
+  </script>
+</body>
 </html>
