--- a/nerin_final_updated/frontend/success.html
+++ b/nerin_final_updated/frontend/success.html
@@ -1,68 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Pago exitoso</title>
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
-  <body>
-    <div class="contenedor">
-      <h1 id="thanksTitle">Gracias por tu compra</h1>
-      <p id="orderIdText"></p>
-      <p id="emailText"></p>
-      <div id="orderSummary" class="payment-summary"></div>
-      <div class="buttons">
-        <a class="btn" id="trackBtn">Seguir mi pedido</a>
-        <a class="btn" href="/index.html">Inicio</a>
-        <a class="btn" href="/shop.html">Seguir comprando</a>
-      </div>
-      <p style="margin-top:1rem" class="help-text">
-        Podés seguir tu pedido usando tu email y el número de orden. Si necesitás ayuda, contactanos por WhatsApp.
-      </p>
-      <div id="whatsapp-button">
-        <a href="https://wa.me/541112345678" target="_blank">
-          <img src="/assets/whatsapp.svg" alt="WhatsApp" />
-        </a>
-      </div>
-    </div>
-    <script>
-      document.addEventListener('DOMContentLoaded', async () => {
-        const params = new URLSearchParams(window.location.search);
-        const id = params.get('external_reference') || params.get('orderId');
-        const msgEl = document.getElementById('thanksTitle');
-        const idEl = document.getElementById('orderIdText');
-        const sumEl = document.getElementById('orderSummary');
-        const trackBtn = document.getElementById('trackBtn');
-        const emailEl = document.getElementById('emailText');
-        if (!id) {
-          msgEl.textContent = 'Pedido no encontrado';
-          return;
+<head>
+  <meta charset="UTF-8" />
+  <title>Estado del pago</title>
+</head>
+<body>
+  <h1 id="msg">Procesando tu pago… ⏳</h1>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const id =
+      params.get('external_reference') ||
+      params.get('orderId') ||
+      params.get('preference_id') ||
+      params.get('pref_id');
+
+    const msg = document.getElementById('msg');
+
+    async function check() {
+      try {
+        const res = await fetch(`/api/orders/${id}/status`);
+        if (!res.ok) return;
+        const data = await res.json();
+        if (['paid', 'approved'].includes(data.status)) {
+          msg.textContent = 'Pago aprobado ✅';
+          return true;
         }
-        try {
-          const resp = await fetch(`/api/orders/${encodeURIComponent(id)}`);
-          if (!resp.ok) throw new Error('not found');
-          const data = await resp.json();
-          const order = data.order;
-          if (!order) {
-            msgEl.textContent = 'No pudimos obtener los datos de tu pedido.';
-            return;
-          }
-          msgEl.textContent = `Gracias por tu compra${order.cliente && order.cliente.nombre ? ', ' + order.cliente.nombre : ''}`;
-          idEl.textContent = `Orden: ${order.id}`;
-          if (emailEl) {
-            emailEl.textContent = order.cliente && order.cliente.email ? `Email: ${order.cliente.email}` : '';
-          }
-          const itemsHtml = (order.productos || []).map(p => `<li>${p.name} x${p.quantity}</li>`).join('');
-          sumEl.innerHTML = `<ul>${itemsHtml}</ul><p class="cart-total-amount">Total: $${order.total.toLocaleString('es-AR')}</p>`;
-          const emailParam = order.cliente && order.cliente.email ? order.cliente.email : '';
-          trackBtn.href = `/seguimiento?order=${encodeURIComponent(order.id)}&email=${encodeURIComponent(emailParam)}`;
-          localStorage.removeItem('nerinCart');
-        } catch (e) {
-          console.error(e);
-          msgEl.textContent = 'Error al cargar el pedido.';
+        if (data.status === 'rejected') {
+          msg.textContent = 'Pago rechazado ❌';
+          return true;
         }
-      });
-    </script>
-  </body>
+        msg.textContent = 'Procesando tu pago… ⏳';
+      } catch (e) {
+        console.error(e);
+      }
+      return false;
+    }
+
+    let attempts = 0;
+    const interval = setInterval(async () => {
+      attempts++;
+      const done = await check();
+      if (done || attempts >= 15) clearInterval(interval);
+    }, 4000);
+    check();
+  </script>
+</body>
 </html>
