feat(api): exponer {preferenceId,nrn} en respuesta de creación de preferencia

--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -2,14 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Pago fallido</title>
+    <title>Pago rechazado</title>
     <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body>
     <div class="contenedor">
-      <p>❌ El pago no pudo completarse. Por favor intenta nuevamente.</p>
-      <a class="btn" href="/index.html">Volver a la tienda</a>
+      <p>❌ Tu pago fue rechazado.</p>
+      <a class="btn" href="/checkout.html">Elegir otro medio de pago</a>
     </div>
   </body>
 </html>
