refactor: inline nerin logo

--- a/nerin_final_updated/frontend/checkout-steps.html
+++ b/nerin_final_updated/frontend/checkout-steps.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="header-inner">
-        <div class="logo"><a href="/index.html">NERIN</a></div>
+        <div class="logo"><a href="/index.html" aria-label="NERIN logo"></a></div>
         <button class="menu-toggle" id="navToggle">☰</button>
         <nav id="mainNav">
           <ul>
