--- a/nerin_final_updated/frontend/account.html
+++ b/nerin_final_updated/frontend/account.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="header-inner">
-        <div class="logo"><a href="/index.html">NERIN</a></div>
+        <div class="logo"><a href="/index.html" aria-label="NERIN logo"></a></div>
         <button class="menu-toggle" id="navToggle">☰</button>
         <nav id="mainNav">
           <ul>
