--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -73,7 +73,7 @@
 <body>
   <header class="simple-header">
     <div class="header-inner">
-      <div class="logo"><a href="/index.html">NERIN</a></div>
+      <div class="logo"><a href="/index.html" aria-label="NERIN logo"></a></div>
     </div>
   </header>
 
