--- a/nerin_final_updated/frontend/invoice.html
+++ b/nerin_final_updated/frontend/invoice.html
@@ -7,8 +7,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Factura – NERIN</title>
-    <link rel="stylesheet" href="style.css" />
-    <style>
+        <style>
       /* Estilo básico para la factura */
       .invoice-box {
         max-width: 800px;
@@ -49,6 +48,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
+      <link rel="stylesheet" href="style.css?v=mobfix-1" />
   </head>
   <body>
     <header>
