--- a/nerin_final_updated/frontend/pages/pendiente.html
+++ b/nerin_final_updated/frontend/pages/pendiente.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pago pendiente</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
 </head>
 <body>
   <div class="contenedor">
