--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Términos y Condiciones</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <style>
+    <style>
     body {
       font-family: -apple-system, "Inter", sans-serif;
       line-height: 1.6;
@@ -69,6 +68,7 @@
       }
     }
   </style>
+    <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
 </head>
 <body>
   <header class="simple-header">
