--- a/nerin_final_updated/frontend/pending.html
+++ b/nerin_final_updated/frontend/pending.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Pago pendiente</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
     <script src="/js/order-status.js" defer></script>
     <noscript>
       <style>
