--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -7,11 +7,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Detalle de producto – NERIN</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
+        <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
+      <link rel="stylesheet" href="style.css?v=mobfix-1" />
   </head>
   <body>
     <header>
