--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seguimiento de tu pedido – NERIN</title>
-    <link rel="stylesheet" href="style.css" />
+          <link rel="stylesheet" href="style.css?v=mobfix-1" />
   </head>
   <body>
     <header>
