Add responsive footer component

--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -18,6 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -66,6 +67,7 @@
         ></div>
       </div>
     </main>
+    <div id="footer-root"></div>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
@@ -75,5 +77,6 @@
     <!-- Configuración y analíticas globales -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
