--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <title>Pago rechazado</title>
     <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <div class="contenedor">
       <p>❌ Tu pago fue rechazado.</p>
       <a class="btn" href="/checkout.html">Elegir otro medio de pago</a>
     </div>
+    <div id="footer-root"></div>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
