--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -92,21 +93,7 @@
       </form>
     </section>
 
-    <footer class="container">
-      <p>📞 WhatsApp | 📧 Email | 📍 CABA</p>
-      <p>
-        <a href="https://instagram.com" target="_blank">Instagram</a> |
-        <a href="/index.html">Inicio</a> | <a href="/shop.html">Catálogo</a> |
-        <a href="/contact.html">Contacto</a> |
-        <a href="/seguimiento.html">Seguir mi pedido</a> |
-        <a href="/pages/terminos.html">Términos y Condiciones</a>
-      </p>
-      <p class="legal">
-        NERIN comercializa repuestos Samsung originales Service Pack adquiridos
-        por canales oficiales. No tenemos vínculo directo con Samsung
-        Electronics.
-      </p>
-    </footer>
+    <div id="footer-root"></div>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
@@ -116,5 +103,6 @@
     <script type="module" src="/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
