--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seguimiento de tu pedido – NERIN</title>
           <link rel="stylesheet" href="style.css?v=mobfix-1" />
+          <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -50,7 +51,9 @@
       </div>
     </main>
 
+    <div id="footer-root"></div>
     <script type="module" src="/js/seguimiento.js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
