--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -442,6 +443,7 @@
         <div id="analytics-dashboard"></div>
       </section>
     </main>
+    <div id="footer-root"></div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/js/admin.js"></script>
     <!-- Configuración y analíticas globales -->
@@ -449,5 +451,6 @@
     <script type="module" src="/js/config.js"></script>
     <!-- Traducciones -->
     <script type="module" src="/js/lang.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
