--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -46,8 +47,10 @@
         </button>
       </form>
     </main>
+    <div id="footer-root"></div>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/index.js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
