--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <header>
@@ -50,6 +51,7 @@
       </div>
       <div id="productGrid" class="product-grid"></div>
     </main>
+    <div id="footer-root"></div>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank">
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
@@ -60,5 +62,6 @@
     <!-- Configuración y analíticas globales -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
