--- a/nerin_final_updated/frontend/success.html
+++ b/nerin_final_updated/frontend/success.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pago aprobado</title>
     <link rel="stylesheet" href="/css/success.css" />
+    <link rel="stylesheet" href="/frontend/css/footer.css" />
   </head>
   <body>
     <noscript>
@@ -27,6 +28,8 @@
         <div class="skeleton" style="height: 4rem"></div>
       </article>
     </main>
+    <div id="footer-root"></div>
     <script type="module" src="/js/success.js" defer></script>
+    <script src="/frontend/js/footer.js" defer></script>
   </body>
 </html>
