--- a/nerin_final_updated/frontend/pending.html
+++ b/nerin_final_updated/frontend/pending.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pago pendiente</title>
     <link rel="stylesheet" href="style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="css/receipt.css" /> <!-- nerin brand fix -->
-    <script src="/js/order-status.js" defer></script>
+    <link rel="stylesheet" href="css/success.css" />
   </head>
   <body>
     <header>
@@ -38,14 +37,32 @@
         Por favor habilitá JavaScript para ver el estado de tu pago.
       </div>
     </noscript>
-    <main class="container receipt-container">
-      <div class="receipt-card" id="statusContainer">
-        <div class="spinner"></div>
-        <p>Estamos confirmando tu pago...</p>
+    <main class="container">
+      <div class="status-icon pending" aria-hidden="true">
+        <svg viewBox="0 0 24 24" class="icon">
+          <circle class="draw" cx="12" cy="12" r="9" />
+          <path class="draw" d="M12 8v4l2 2" />
+        </svg>
       </div>
+      <article class="receipt" id="statusContainer">
+        <h1>Pago pendiente</h1>
+        <p class="date" id="fecha"></p>
+        <div id="statusMessage">
+          <div class="spinner"></div>
+          <p>Estamos confirmando tu pago...</p>
+        </div>
+      </article>
     </main>
     <script type="module" src="/js/config.js"></script>
+    <script src="/js/order-status.js"></script>
     <script>
+      document.getElementById('fecha').textContent = new Date().toLocaleString('es-AR', {
+        day: '2-digit',
+        month: '2-digit',
+        year: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit'
+      });
       document.addEventListener('DOMContentLoaded', async () => {
         try {
           const id = getIdentifier();
@@ -62,7 +79,7 @@
             showProcessing('Estamos acreditando tu pago...');
           }
         } catch (e) {
-          const el = document.getElementById('statusContainer');
+          const el = document.getElementById('statusMessage');
           if (el) {
             el.innerHTML = '<p>Ocurrió un problema al verificar tu pago. Intentá nuevamente más tarde.</p>';
           }
