chore: remove incompatible binary screenshots

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -12,8 +12,6 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
-      <link rel="stylesheet" href="/components/np-footer.css" />
-      <script src="/components/np-footer.js" defer></script>
   </head>
   <body>
     <header>
@@ -345,8 +343,10 @@
           <label><input type="checkbox" name="badge_authenticity" /> Autenticidad</label>
           <input type="color" name="accentFrom" value="#FFD54F" />
           <input type="color" name="accentTo" value="#FFC107" />
-          <input type="color" name="bg" value="#0B0B0C" />
-          <input type="color" name="fg" value="#EDEDEF" />
+          <input type="color" name="bg" value="#ffffff" />
+          <input type="color" name="fg" value="#111827" />
+          <label><input type="checkbox" name="themeDark" /> Modo oscuro</label>
+          <label><input type="checkbox" name="accentBar" checked /> Barra de acento</label>
           <label><input type="checkbox" name="newsEnabled" /> Newsletter habilitado</label>
           <input type="text" name="newsPlaceholder" placeholder="Placeholder newsletter" />
           <input type="text" name="newsSuccess" placeholder="Mensaje éxito" />
