--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
+  <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1427">
   </head>
   <body>
     <header>
