--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -96,5 +96,7 @@
         }
       });
     </script>
-  </body>
+    <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
+</body>
 </html>
