--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -395,57 +395,16 @@
       <section id="footerSection" class="admin-section" style="display: none">
         <h3>Footer</h3>
         <form id="footerForm" class="admin-form">
-          <input type="text" name="brand" placeholder="Marca" />
-          <input type="text" name="slogan" placeholder="Slogan" />
-          <label><input type="checkbox" name="ctaEnabled" /> CTA habilitado</label>
-          <input type="text" name="ctaText" placeholder="Texto CTA" />
-          <input type="text" name="ctaLabel" placeholder="Etiqueta botón" />
-          <input type="text" name="ctaHref" placeholder="Enlace CTA" />
-          <textarea name="columns" placeholder="Columnas (JSON)" style="min-height:80px"></textarea>
-          <input type="text" name="whatsapp" placeholder="WhatsApp" />
+          <div id="linksFields"></div>
+          <button type="button" id="addLink" class="button">Agregar link</button>
+          <div id="socialFields"></div>
+          <button type="button" id="addSocial" class="button">Agregar red</button>
+          <input type="text" name="phone" placeholder="Teléfono" />
           <input type="email" name="email" placeholder="Email" />
-          <input type="text" name="address" placeholder="Dirección" />
-          <input type="url" name="instagram" placeholder="Instagram URL" />
-          <input type="url" name="linkedin" placeholder="LinkedIn URL" />
-          <input type="url" name="youtube" placeholder="YouTube URL" />
-          <label><input type="checkbox" name="show_cta" /> Mostrar CTA</label>
-          <label><input type="checkbox" name="show_branding" /> Mostrar branding</label>
-          <label><input type="checkbox" name="show_columns" /> Mostrar columnas</label>
-          <label><input type="checkbox" name="show_contact" /> Mostrar contacto</label>
-          <label><input type="checkbox" name="show_social" /> Mostrar redes</label>
-          <label><input type="checkbox" name="show_badges" /> Mostrar badges</label>
-          <label><input type="checkbox" name="show_newsletter" /> Mostrar newsletter</label>
-          <label><input type="checkbox" name="show_legal" /> Mostrar legal</label>
-          <label><input type="checkbox" name="badge_mercadoPago" /> Mercado Pago</label>
-          <label><input type="checkbox" name="badge_ssl" /> SSL</label>
-          <label><input type="checkbox" name="badge_andreani" /> Andreani</label>
-          <label><input type="checkbox" name="badge_oca" /> OCA</label>
-          <label><input type="checkbox" name="badge_dhl" /> DHL</label>
-          <label><input type="checkbox" name="badge_authenticity" /> Autenticidad</label>
-          <input type="color" name="accentFrom" value="#FFD54F" />
-          <input type="color" name="accentTo" value="#FFC107" />
-          <input type="color" name="bg" value="#ffffff" />
-          <input type="color" name="fg" value="#111827" />
-          <label>
-            Modo
-            <select name="themeMode">
-              <option value="auto">Auto</option>
-              <option value="light">Light</option>
-              <option value="dark">Dark</option>
-            </select>
-          </label>
-          <label><input type="checkbox" name="accentBar" checked /> Barra de acento</label>
-          <label><input type="checkbox" name="newsEnabled" /> Newsletter habilitado</label>
-          <input type="text" name="newsPlaceholder" placeholder="Placeholder newsletter" />
-          <input type="text" name="newsSuccess" placeholder="Mensaje éxito" />
-          <input type="text" name="cuit" placeholder="CUIT" />
-          <input type="text" name="iibb" placeholder="IIBB" />
-          <input type="text" name="terms" placeholder="URL Términos" />
-          <input type="text" name="privacy" placeholder="URL Privacidad" />
+          <input type="text" name="location" placeholder="Ubicación" />
+          <textarea name="legal" placeholder="Texto legal" style="min-height:80px"></textarea>
           <div style="display:flex; gap:0.5rem; flex-wrap:wrap;">
             <button type="submit" class="button primary">Guardar</button>
-            <button type="button" id="footerReset" class="button">Restaurar defaults</button>
-            <button type="button" id="footerView" class="button">Ver en sitio</button>
           </div>
         </form>
       </section>
