--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -144,5 +144,7 @@
     <script type="module" src="/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
-  </body>
+    <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
+</body>
 </html>
