--- a/nerin_final_updated/frontend/pages/precheckout.html
+++ b/nerin_final_updated/frontend/pages/precheckout.html
@@ -44,6 +44,8 @@
   </div>
 </footer>
 
+  <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
 </body>
 
 
