--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -190,6 +190,8 @@
 </footer>
 
   
+  <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
 </body>
 </html>
 
