--- a/nerin_final_updated/frontend/pending.html
+++ b/nerin_final_updated/frontend/pending.html
@@ -98,5 +98,7 @@
         }
       });
     </script>
-  </body>
+    <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
+</body>
 </html>
