--- a/nerin_final_updated/frontend/register.html
+++ b/nerin_final_updated/frontend/register.html
@@ -108,5 +108,7 @@
     <!-- Configuración global -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
-  </body>
+    <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
+</body>
 </html>
