--- a/nerin_final_updated/frontend/success.html
+++ b/nerin_final_updated/frontend/success.html
@@ -81,5 +81,7 @@
 </footer>
     <script type="module" src="/js/config.js"></script>
     <script type="module" src="/js/success.js"></script>
-  </body>
+    <script defer src="/js/footer.js"></script>
+  <script defer src="/js/fab-offset.js"></script>
+</body>
 </html>
