--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -69,7 +69,7 @@
     }
   </style>
     <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
 <body>
@@ -155,8 +155,7 @@
       Estos términos se rigen por las leyes de la República Argentina. Cualquier controversia será resuelta por los tribunales ordinarios de la Ciudad Autónoma de Buenos Aires.
     </p>
   </main>
-  <script defer src="/components/np-footer.js"></script>
-<script defer src="/js/fab-offset.js"></script>
+  <script defer src="/components/footer.js"></script>
 </body>
 </html>
 
