--- a/nerin_final_updated/frontend/register.html
+++ b/nerin_final_updated/frontend/register.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
   <body>
@@ -75,7 +75,6 @@
     <!-- Configuración global -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
-  <script defer src="/components/np-footer.js"></script>
-<script defer src="/js/fab-offset.js"></script>
+  <script defer src="/components/footer.js"></script>
 </body>
 </html>
