--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
   </head>
   <body class="hide-cta">
@@ -545,12 +545,10 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="/js/admin.js"></script>
-    <script defer src="/components/np-footer.js"></script>
-    <!-- Configuración y analíticas globales -->
-    <script type="module" src="/admin-footer.js"></script>
+    <script defer src="/components/footer.js"></script>
+        <!-- Configuración y analíticas globales -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="/js/config.js"></script>
-    <script defer src="/js/fab-offset.js"></script>
     <!-- Traducciones -->
     <script type="module" src="/js/lang.js"></script>
   </body>
