--- a/nerin_final_updated/frontend/pages/error.html
+++ b/nerin_final_updated/frontend/pages/error.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Pago rechazado</title>
   <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
 <body>
@@ -13,8 +13,7 @@
     <p>El pago no pudo procesarse. Intenta nuevamente o elige otro medio.</p>
     <a class="btn" href="/index.html">Volver a la tienda</a>
   </div>
-  <script defer src="/components/np-footer.js"></script>
-<script defer src="/js/fab-offset.js"></script>
+  <script defer src="/components/footer.js"></script>
 </body>
 
 
