--- a/nerin_final_updated/frontend/pages/precheckout.html
+++ b/nerin_final_updated/frontend/pages/precheckout.html
@@ -4,13 +4,12 @@
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
     <title>Redirigiendo…</title>
     <script>window.location.replace('/checkout-steps.html');</script>
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
   <body>
     <p>Redirigiendo al nuevo checkout...</p>
-  <script defer src="/components/np-footer.js"></script>
-<script defer src="/js/fab-offset.js"></script>
+  <script defer src="/components/footer.js"></script>
 </body>
 
 
