--- a/nerin_final_updated/frontend/pending.html
+++ b/nerin_final_updated/frontend/pending.html
@@ -6,7 +6,7 @@
     <title>Pago pendiente</title>
     <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <link rel="stylesheet" href="css/success.css" />
-    <link rel="stylesheet" href="/components/np-footer.css">
+    <link rel="stylesheet" href="/components/footer.css">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
   <body>
@@ -65,7 +65,6 @@
         }
       });
     </script>
-  <script defer src="/components/np-footer.js"></script>
-<script defer src="/js/fab-offset.js"></script>
+  <script defer src="/components/footer.js"></script>
 </body>
 </html>
