fix: remove footer stamp and use logo branding

--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -6,7 +6,7 @@
     <title>Pago rechazado</title>
     <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <link rel="stylesheet" href="css/success.css" />
-    <link rel="stylesheet" href="/components/footer.css">
+    <link rel="stylesheet" href="/components/footer.css?v=nerin-footer-1">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
   <body>
@@ -63,6 +63,6 @@
         }
       });
     </script>
-  <script defer src="/components/footer.js"></script>
+  <script defer src="/components/footer.js?v=nerin-footer-1"></script>
 </body>
 </html>
