--- a/nerin_final_updated/frontend/checkout.html
+++ b/nerin_final_updated/frontend/checkout.html
@@ -5,7 +5,7 @@
   <title>Estado del pago</title>
   <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
-    <link rel="stylesheet" href="/components/footer.css">
+    <link rel="stylesheet" href="/components/footer.css?v=nerin-footer-1">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
 <body>
@@ -27,7 +27,7 @@
       messageBox.innerText = "❌ El pago no fue completado. Podés intentarlo nuevamente.";
     }
   </script>
-  <script defer src="/components/footer.js"></script>
+  <script defer src="/components/footer.js?v=nerin-footer-1"></script>
 </body>
 
 
