--- a/nerin_final_updated/frontend/success.html
+++ b/nerin_final_updated/frontend/success.html
@@ -6,7 +6,7 @@
     <title>Pago aprobado</title>
     <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <link rel="stylesheet" href="css/success.css" />
-    <link rel="stylesheet" href="/components/footer.css">
+    <link rel="stylesheet" href="/components/footer.css?v=nerin-footer-1">
   <link rel="stylesheet" href="/css/overrides.css?v=nerin-20250826-1459">
 </head>
   <body>
@@ -48,6 +48,6 @@
     </main>
     <script type="module" src="/js/config.js"></script>
     <script type="module" src="/js/success.js"></script>
-  <script defer src="/components/footer.js"></script>
+  <script defer src="/components/footer.js?v=nerin-footer-1"></script>
 </body>
 </html>
