docs: update mp health report

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -273,7 +273,7 @@
         <label for="orderStatusFilter">Filtrar por pago:</label>
         <select id="orderStatusFilter">
           <option value="todos">Todos</option>
-          <option value="pagado">Pagado</option>
+          <option value="aprobado">Aprobado</option>
           <option value="pendiente">Pendiente</option>
           <option value="rechazado">Rechazado</option>
         </select>
