Add orders version endpoint and align admin build handling

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -720,7 +720,10 @@
       </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="/js/admin.js?v=20240926"></script>
+    <script>
+      window.__NERIN_ADMIN_BUILD__ = "20241002-nerin-01";
+    </script>
+    <script type="module" src="/js/admin.js?v=20241002-nerin-01"></script>
     <!-- Configuración y analíticas globales -->
     <script type="module" src="/admin-footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
