feat: enable multi-image product gallery with zoom and admin support

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -354,6 +354,7 @@
               id="productImages"
               name="images"
               accept=".jpg,.jpeg,.png"
+              multiple
             />
             <div id="imagePreview" class="image-preview"></div>
             <div class="seo-preview" id="seoPreview">
