fix: center product gallery imagery

--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -32,16 +32,14 @@
         </nav>
       </div>
     </header>
-    <main class="container product-detail-container">
-      <section class="pdp" id="productDetail">
-        <div class="pdp__gallery" id="gallery"></div>
-        <div class="pdp__info" id="productInfo">
-          <!-- Información del producto -->
-        </div>
+    <main class="product-page container" id="productDetail">
+      <section class="product-page__layout" aria-label="Detalle del producto">
+        <div class="product-page__gallery" id="gallery"></div>
+        <div class="product-page__info" id="productInfo"></div>
       </section>
     </main>
     <div
-      class="pdp__lightbox"
+      class="product-page__lightbox"
       id="lightbox"
       role="dialog"
       aria-hidden="true"
