Add JSON-LD breadcrumbs and organization schema updates

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -87,7 +87,7 @@
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "NERIN Repuestos",
+  "name": "NERIN Parts",
   "url": "__BASE_URL__/",
   "logo": "__BASE_URL__/assets/IMG_3086.png",
   "sameAs": [
@@ -99,6 +99,7 @@
     {
       "@type": "ContactPoint",
       "telephone": "+54 11 1234-5678",
+      "email": "info@nerinparts.com",
       "contactType": "customer service",
       "areaServed": "AR",
       "availableLanguage": ["es-AR"]
