--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -84,6 +84,30 @@
   "url": "__BASE_URL__/shop.html"
 }
     </script>
+    <script
+      type="application/ld+json"
+      id="shop-breadcrumbs"
+      data-seo-jsonld="breadcrumbs"
+    >
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Inicio",
+      "item": "__BASE_URL__/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Productos",
+      "item": "__BASE_URL__/shop.html"
+    }
+  ]
+}
+    </script>
 </head>
   <body>
     <header>
